# Awesome_AI_Infra_Learning

./: .gitignore
014-CUDA-Triton-Norm-Kernels/: README.md
014-CUDA-Triton-Norm-Kernels/cuda/: reduce.cuh
014-CUDA-Triton-Norm-Kernels/cuda/bench/: io_bench.cu  layer_norm_bench.cu  rms_norm_bench.cu
014-CUDA-Triton-Norm-Kernels/triton/: batchnorm.py
014-Norm/: README.md
014-Norm/cuda/: CMakeLists.txt  io.cuh  layer_norm.cuh  norm_kernel.cuh  rms_norm.cuh
014-Norm/cuda/bench/: reduce_bench.cu
014-Norm/triton/: layer_norm.py  layernorm_torch.py  rms_norm.py
015-Matmul/: .clangd  README.md
015-Matmul/cuda/: CMakeLists.txt  bench.cuh  common.cuh  matmul_bench.cu  performance.txt  tune_results.txt  v0_naive.cuh  v1_0smem.cuh  v1_1Dtiling.cuh  v1_2Dtiling.cuh  v2_tile.cuh  v3_dbuf.cuh  v4_async.cuh  v5_wmma.cuh
015-Matmul/cutlass/: CMakeLists.txt  cutlass_sgemm.cu
015-Matmul/docs/: matmul_optimization_guide.md  v5_wmma_deep_dive.md  vs_leetcuda_analysis.md
015-Matmul/ppytorch/: dot.ipynb
015-Matmul/triton/: matmul.py  matmul_v0.py
016-Conv/: README.md
016-Conv/cuda/: CMakeLists.txt  bench.cuh  common.cuh  conv_bench.cu  performance.txt  v0_naive.cuh  v1_im2col.cuh  v2_tiled.cuh  v3_smem.cuh  v4_wino.cuh
016-Conv/ppytorch/: bench.py  conv.ipynb  conv2d.py
016-Conv/triton/: conv_v0.py
